???? 1.4.3.3

    user visible changes client:
    * Calculation and reporting of number of bytes to sync by device/drive
    * Fix an error in calculation of the number of bytes to copy

19/4/2017 1.4.3.2

    user visible changes client:
    * Added removing of previous sources when uninstalling
    * Added reading of InstlClient.yaml in InstlMisc.do_exec. This is a temp hack, which additional config file to read should come from command line options.

    programmer visible changes:
    * Move functions InstlClientCopy.create_remove_previous_sources_instructions_for_source, InstlClientCopy.create_remove_previous_sources_instructions_for_target_folder to InstlClient so they can be used by InstlClientRemove
    * InstlInstanceBase.read_require - calling self.items_table.read_require_node only if self.items_table was initialized

9/4/2017 1.4.3.1

    user visible changes admin:
    * fixed problem in gui mode with handing --limit options that has multiple patha that have spaces in them.

4/4/2017 1.4.3.0

    user visible changes admin:
    * new command: exec to execute any python code

    programmer visible changes:
    * merged some changes form optimize-db to repalce usage of IntallItem with database queries

26/3/2017 1.4.2.0
    user visible changes client:
    * New config variable: REMOVE_PREVIOUS_SOURCES set to True be default, If set to False will prevent previous_sources from being deleted.
    * Merge branch 'wfi_lev': better checking of 2 types of wfi files
    * platform_helper.rmdir, platform_helper.rmfile got new parameter check_exist that will preform the deletion
        only if the file/folder exists. This is "for good measure" so we do not get redundant error messages during batch runs.

    programmer visible changes:
    * New function: ConfigVarList.ResolveVarToBool will resolve a variable from yes,no,true,false,y,n to True/False. Default value will be returned in case variable does not exist or cannot be converted to bool.