@@ -35,15 +35,14 @@ def get_wfi_version(in_path):
     retVal = None
     try:
         version = None
-        with codecs.open(in_path, 'r', encoding='utf-8', errors='ignore') as f:
-            raw = f.readlines()
         version_str = 'comment version'
         if 'SGS' in in_path:
             version_str = 'version value'
-        for line in raw:
-            if version_str in line:
-                version = line.split('"')[1]
-                break
+        with codecs.open(in_path, 'r', encoding='utf-8', errors='ignore') as rfd:
+            for line in rfd:
+                if version_str in line:
+                    version = line.split('"')[1]
+                    break
         if version:
             retVal = (in_path, version, None)
     except:
